Basic support for additional drawing shapes.

--- a/src/app/modules/main/components/canvas/canvas.component.html
+++ b/src/app/modules/main/components/canvas/canvas.component.html
@@ -11,7 +11,7 @@
         <md-button-toggle value="rectangle">
           <md-icon>stop</md-icon>
         </md-button-toggle>
-        <md-button-toggle value="oval">
+        <md-button-toggle value="ellipse">
           <md-icon>fiber_manual_record</md-icon>
         </md-button-toggle>
       </md-button-toggle-group>
