Updated dependencies and started working on touch support

--- a/src/app/modules/main/components/canvas/canvas.component.html
+++ b/src/app/modules/main/components/canvas/canvas.component.html
@@ -20,6 +20,7 @@
   <button md-mini-fab class="canvas-menu-toggle" (click)="canvasSidebar.toggle()">
     <md-icon>menu</md-icon>
   </button>
-  <div #canvasContainer svgJs (mousemove)="onMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)" (mouseenter)="onMouseEnter($event)">
+  <div #canvasContainer svgJs (touchstart)="onMouseDown($event)" (touchmove)="onMove($event)" (touchend)="onMouseUp($event)"
+    (mousemove)="onMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)" (mouseenter)="onMouseEnter($event)">
   </div>
 </md-sidenav-container>
