--- a/src/app/modules/main/components/canvas/canvas.component.scss
+++ b/src/app/modules/main/components/canvas/canvas.component.scss
@@ -1,9 +1,10 @@
 .canvas-menu-toggle {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  left: 20px;
+  top: 20px;
 }
 
 [svgJs] {
   height: calc(100% - 4px);
+  cursor: crosshair;
 }
